--- a/Laboratory/Storyboards/Base.lproj/Main.storyboard
+++ b/Laboratory/Storyboards/Base.lproj/Main.storyboard
@@ -254,7 +254,7 @@
         <!--Equipment User ListVC-->
         <scene sceneID="nLv-q8-eiJ">
             <objects>
-                <tableViewController id="QXx-5b-iab" customClass="EquipmentUserListVC" customModule="Laboratory" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="EquipmentUserListVC" id="QXx-5b-iab" customClass="EquipmentUserListVC" customModule="Laboratory" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="g4W-Ai-BVl">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
