--- a/Laboratory/Storyboards/Base.lproj/Main.storyboard
+++ b/Laboratory/Storyboards/Base.lproj/Main.storyboard
@@ -203,7 +203,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <state key="normal" title="Remove"/>
                                         <connections>
-                                            <action selector="removeEquipment:" destination="cly-ig-uLQ" eventType="touchUpInside" id="bU9-8S-9ZK"/>
+                                            <action selector="deleteEquipment:" destination="cly-ig-uLQ" eventType="touchUpInside" id="bU9-8S-9ZK"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -259,7 +259,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <navigationBar key="tableHeaderView" contentMode="scaleToFill" id="WCR-4e-nmq">
+                        <navigationBar key="tableHeaderView" contentMode="scaleToFill" misplaced="YES" id="WCR-4e-nmq">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <items>
