--- a/Laboratory/Views/LabEquipmentCell/LabEquipmentTVCell.xib
+++ b/Laboratory/Views/LabEquipmentCell/LabEquipmentTVCell.xib
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -42,8 +38,8 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="equipmentNameLbl" destination="S3J-oc-q1t" id="yAR-Au-C5b"/>
-                <outlet property="quantityLbl" destination="r8f-vf-1tz" id="0Qa-KV-7g1"/>
+                <outlet property="equipmentNameLabel" destination="S3J-oc-q1t" id="yAR-Au-C5b"/>
+                <outlet property="quantityLabel" destination="r8f-vf-1tz" id="0Qa-KV-7g1"/>
             </connections>
             <point key="canvasLocation" x="47.826086956521742" y="58.928571428571423"/>
         </tableViewCell>
