--- a/Laboratory/Views/LabInfo/LabInfoView.xib
+++ b/Laboratory/Views/LabInfo/LabInfoView.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -48,7 +46,7 @@
                             <constraints>
                                 <constraint firstAttribute="height" constant="36" id="Xd6-tA-RiU"/>
                             </constraints>
-                            <state key="normal" title="Add Equipments"/>
+                            <state key="normal" title="Add Equipment"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dck-os-CAM">
                             <rect key="frame" x="0.0" y="222" width="374" height="36"/>
@@ -98,6 +96,7 @@
                 <outlet property="labEquipmentTableView" destination="e7i-yQ-Tle" id="AxT-zH-BMo"/>
                 <outlet property="nameTextView" destination="I5b-9h-ENZ" id="bfF-S0-yXf"/>
             </connections>
+            <point key="canvasLocation" x="139" y="104"/>
         </view>
     </objects>
 </document>
